--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -5,7 +5,7 @@
   <title>Client Map</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
-    /* Remove default margin/padding and make the map full-screen */
+    /* Full-screen map styling */
     html, body {
       margin: 0;
       padding: 0;
@@ -20,10 +20,10 @@
 <body>
   <div id="map"></div>
 
-  <!-- Load Leaflet JS from CDN -->
+  <!-- Load Leaflet JS -->
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script>
-    // Create a map centered around a default location (e.g., San Francisco)
+    // Create a map (centered by default on San Francisco)
     const map = L.map('map').setView([37.7749, -122.4194], 5);
 
     // Add OpenStreetMap tiles
@@ -32,26 +32,20 @@
       attribution: '&copy; OpenStreetMap contributors'
     }).addTo(map);
 
-    // This array will hold the markers so we can clear them on updates.
+    // Keep track of markers so we can update them
     let markers = [];
 
-    // Function to fetch registered clients and update the map
+    // Fetch registered clients from the API and update the map markers
     function fetchClients() {
-      fetch('/clients')
+      fetch('/api/clients')
         .then(response => response.json())
         .then(data => {
-          // Remove old markers from the map
-          markers.forEach(marker => {
-            map.removeLayer(marker);
-          });
+          // Remove old markers
+          markers.forEach(marker => map.removeLayer(marker));
           markers = [];
-
-          // Add a new marker for each client
+          // Add a marker for each client
           data.clients.forEach(client => {
             const marker = L.marker([client.lat, client.lng]).addTo(map);
-
-            // Create popup content with client info.
-            // We use the client.id (which is a timestamp) to show when registration happened.
             const popupContent = `
               <strong>${client.name}</strong><br/>
               IP: ${client.ip}<br/>
@@ -62,12 +56,10 @@
             markers.push(marker);
           });
         })
-        .catch(error => {
-          console.error('Error fetching clients:', error);
-        });
+        .catch(error => console.error('Error fetching clients:', error));
     }
 
-    // Fetch clients immediately and then poll every 5 seconds
+    // Initial fetch and polling every 5 seconds
     fetchClients();
     setInterval(fetchClients, 5000);
   </script>
