--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           },
           "onclick": {
             "enable": true,
-            "mode": "push"
+            "mode": "grab"
           },
           "resize": true
         },
@@ -160,14 +160,14 @@
             }
           },
           "bubble": {
-            "distance": 400,
+            "distance": 50,
             "size": 40,
             "duration": 2,
             "opacity": 8,
             "speed": 3
           },
           "repulse": {
-            "distance": 200,
+            "distance": 50,
             "duration": 0.4
           },
           "push": {
