--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     }
     .content a {
       text-decoration: none;
+      margin: 10px;
     }
     .content button {
       background: #ff6600;
@@ -69,6 +70,9 @@
     <h1>Welcome to ShadowBytes Epic File Hub!</h1>
     <a href="https://bleh-xi.vercel.app/Charlottes%20App.exe">
       <button>power.exe</button>
+    </a>
+    <a href="https://bleh-xi.vercel.app/Silly.zip">
+      <button>Silly.zip</button>
     </a>
   </div>
 
