--- a/index.html
+++ b/index.html
@@ -69,10 +69,13 @@
   <div class="content">
     <h1>Welcome to ShadowBytes Epic File Hub!</h1>
     <a href="https://bleh-xi.vercel.app/Charlottes%20App.exe">
-      <button>power.exe</button>
+      <button>Charlottes App.exe</button>
     </a>
     <a href="https://bleh-xi.vercel.app/Silly.zip">
       <button>Silly.zip</button>
+    </a>
+    <a href="https://bleh-xi.vercel.app/POWER.exe">
+      <button>POWER.exe.zip</button>
     </a>
   </div>
 
