--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <button>Silly.zip</button>
     </a>
     <a href="https://bleh-xi.vercel.app/POWER.exe">
-      <button>POWER.exe.zip</button>
+      <button>POWER.exe</button>
     </a>
   </div>
 
