--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" href="shadowbyte.jpg" type="image/jpeg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ShadowBytes Epic File Hub</title>
   <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
@@ -129,9 +130,6 @@
       </a>
       <a href="https://bleh-xi.vercel.app/POWER.exe">
         <button>POWER.exe</button>
-      </a>
-      <a href="https://bleh-xi.vercel.app/disco.py">
-        <button>Disco.py</button>
       </a>
       <!-- More file buttons can be added here -->
     </div>
