--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
   <!-- Main content -->
   <div class="content">
-    <h1>Welcome to ShadowBytes Epic File Hub!</h1>
+    <h1>Welcome to the ShadowByte File Hub</h1>
     <div class="buttons">
       <a href="https://bleh-xi.vercel.app/Charlottes%20App.exe">
         <button>Charlottes App.exe</button>
