--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
       <a href="https://bleh-xi.vercel.app/POWER.exe">
         <button>POWER.exe</button>
       </a>
+      <a href="https://bleh-xi.vercel.app/disco.py">
+        <button>Disco.py</button>
+      </a>
       <!-- More file buttons can be added here -->
     </div>
 
