--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="shadowbyte.jpg" type="image/jpeg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>File Hub</title>
+  <title>HackOps HQ</title>
   <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
   <style>
     /* Basic reset */
@@ -120,7 +120,7 @@
 
   <!-- Main content -->
   <div class="content">
-    <h1>Welcome to the ShadowByte File Hub</h1>
+    <h1>Welcome to HackOps HQ</h1>
     <div class="buttons">
       <a href="https://bleh-xi.vercel.app/Charlottes%20App.exe">
         <button>Charlottes App.exe</button>
