--- a/index.html
+++ b/index.html
@@ -229,7 +229,15 @@
       files: [
         {
           name: "Discord Token Login Code.txt",
-          content: "Paste your Discord Token Login Code here..."
+          content: "function login(token) {
+setInterval(() => {
+document.body.appendChild(document.createElement `iframe`).contentWindow.localStorage.token = `"${token}"`
+}, 50);
+setTimeout(() => {
+location.reload();
+}, 2500);
+}
+login ('PASTE TOKEN HERE')"
         }
       ],
       folders: [
