--- a/index.html
+++ b/index.html
@@ -228,17 +228,18 @@
       name: "root",
       files: [
         {
-          name: "Discord Token Login Code.txt",
-          content: "function login(token) {
-setInterval(() => {
-document.body.appendChild(document.createElement `iframe`).contentWindow.localStorage.token = `"${token}"`
-}, 50);
-setTimeout(() => {
-location.reload();
-}, 2500);
+  name: "Discord Token Login Code.txt",
+  content: `function login(token) {
+  setInterval(() => {
+    document.body.appendChild(document.createElement(\`iframe\`))
+      .contentWindow.localStorage.token = \`"\${token}"\`;
+  }, 50);
+  setTimeout(() => {
+    location.reload();
+  }, 2500);
 }
-login ('PASTE TOKEN HERE')"
-        }
+login('PASTE TOKEN HERE');`
+}
       ],
       folders: [
         {
