--- a/index.html
+++ b/index.html
@@ -537,9 +537,12 @@ namespace Big_Silly
           ]
         },
         {
-          name: "Tools",
+          name: "Roblox Scripts",
           files: [
-            { name: "Tool.lua", content: "-- Lua tool script here" }
+            { name: "RuniX Hub.lua", content: "loadstring(game:HttpGet("https://raw.githubusercontent.com/ShadowByte098/Hub/refs/heads/main/Hub"))()" }
+          ],
+          files: [
+            { name: "Infinite Yield.lua", content: "loadstring(game:HttpGet("https://raw.githubusercontent.com/EdgeIY/infiniteyield/master/source"))()" }
           ],
           folders: []
         }
