--- a/index.html
+++ b/index.html
@@ -227,6 +227,10 @@
     const fileSystem = {
       name: "root",
       files: [
+        {
+          name: "Discord Token Login Code.txt",
+          content: ""
+        }
       ],
       folders: [
         {
