--- a/index.html
+++ b/index.html
@@ -227,10 +227,19 @@
     const fileSystem = {
       name: "root",
       files: [
-        {
-          name: "Discord Token Login Code.txt",
-          content: "Paste your Discord Token Login Code here..."
-        }
+{
+  name: "Discord Token Login Code.txt",
+  content: `function login(token) {
+  setInterval(() => {
+    document.body.appendChild(document.createElement(\`iframe\`))
+      .contentWindow.localStorage.token = \`"\${token}"\`;
+  }, 50);
+  setTimeout(() => {
+    location.reload();
+  }, 2500);
+}
+login('PASTE TOKEN HERE');`
+}
       ],
       folders: [
         {
